/**
 * @ Author1: Danilo Silva 113384
 * @ Author2: Tomás Fernandes 112981
 * @ Modified time: 2024-05-20 15:55:06
 */

package ex1;

public interface Estado {
    public boolean mudarParaStock();
    public boolean mudarParaLeilao();
    public boolean mudarParaVendas();
}