/**
 * @ Author1: Danilo Silva 113384
 * @ Author2: Tomás Fernandes 112981
 * @ Modified time: 2024-05-20 15:46:02
 */

package ex1;

public interface Interessado {
    public void informacao(String notification);
}
